# kmertk

./: Cargo.toml  LICENSE  README.en.md  README.md
src/: main.rs
src/modules/: collection.rs  coverage.rs  distance.rs  match_module.rs  miniset.rs  mod.rs
src/utils/: fasta.rs  kmer.rs  mod.rs
